margin changes of boxes

--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -1,3 +1,6 @@
+/*miscellaneous*/
+.row>[class*="span"]{display:inline;float:left;margin-left:12px;}
+
 /* Stream */
 .newsfeed h4{ margin:9px 10px 10px 10px; font: 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height:10%; letter-spacing:0.15em; color:#fff; text-shadow:1px 1px 0 rgb(0,0,0); }
 .newsfeed p{ margin:9px 12px; font:300 11px 'Lucida Grande', Tahoma, Verdana, sans-serif; color:#aaa;}
@@ -135,8 +138,10 @@
 .level{ font: bold 11px arial, sans-serif; }
 .name{ text-decoration:none; color:gray; }
 .commentfeed { height:300px; width: 200px; border-radius: 4px; background-color:white; vertical-align:top; position:relative; left:337px; position:absolute; }
-.span5{ display:inline-block; vertical-align: top; }
-.span11{ display: inline-block; vertical-align: top; }
+.span5{ display:inline-block; vertical-align: top; width:288px;}
+.span11{ display: inline-block; vertical-align: top;} 
+.row .span5{margin-left:20px;}
+.row .span11{margin-left:12px;}
 .container.body { width: 940px; padding: 15px; }
 #content { padding-top: 42px; min-height: 450px;}
 
@@ -154,16 +159,7 @@
 .profilepersonaicons img{ margin-right:8px; height:30px; width:30px; }
 .leftrailcontent{ list-style-type: none; display:list-item; margin-top:3px; }
 .leftrailicon{ height:46px; width:46px; border-radius:3px; margin-right:3px; }
-.leftbox{
-  text-shadow: 0 1px 0 white;
-  border: 1px solid rgba(0, 0, 0, .1);
-  font-size:12px;
-  position: relative;
-  margin-bottom: 10px;
-  line-height: 16px;
-  border-radius: 6px;
-  display:block;
-}
+.leftbox{text-shadow: 0 1px 0 white; border: 1px solid rgba(0, 0, 0, .1);font-size:12px; position: relative; margin-bottom: 12px;line-height: 16px;border-radius: 6px; display:block;}
 .leftboxheader{
   background-color: #F9F9F9;
   border-top-right-radius: 5px;
@@ -215,8 +211,9 @@
 .CRresponsespace textarea {display:block; margin:6px 12px 12px 12px; width:94%;}
 .CRbuttonspace {margin-top:12px; }
 
-#topsection { margin: 0; border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; position:relative; background-clip: padding-box; color:#333; background-color:white; margin-bottom:10px; }
+#topsection { border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; position:relative; background-clip: padding-box; color:#333; background-color:white; margin-bottom:12px; }
 .headerspace { padding: 12px 0 12px 12px; font:bold 11px arial, sans-serif; text-transform: uppercase; border-bottom: 1px solid #DDD; border-top-left-radius: 6px; border-top-right-radius: 6px; }
 #updatespace { background-color: #F9F9F9; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; padding: 12px 0 12px 12px; }
 .inlinedisplay { list-style-type: none; position:relative; margin: 0; }
 .inlinedisplay li{ display:inline; }
+
