--- a/app/views/mailer/path_result.html.erb
+++ b/app/views/mailer/path_result.html.erb
@@ -3,7 +3,10 @@
 <p>Congratulations on passing the <%= @path.name %> <%= @path.name.downcase.include?("certification") ? "" : @name_for_paths %> with a score of <%= @enrollment.percentage_correct %>%.</p>
 <p>Your score has been logged in your profile and sent to the <%= @current_company.name %> team. If you are not yet a Senior Researcher and would like to become one, please email support@infoarmy.com to get started.</p>
 <% else %>
-<p>Unfortunately you did not get a high enough score to pass the <%= @path.name %> <%= @path.name.downcase.include?("certification") ? "" : @name_for_paths %> with a score of <%= @enrollment.percentage_correct %>% correct. Don't worry, you can try again, but first you'll need to complete another report to get more practice. Once you do so, please email support@infoarmy.com to take the certification test again.</p>
+<p>Unfortunately you did not get a high enough score to pass the <%= @path.name %> <%= @path.name.downcase.include?("certification") ? "" : @name_for_paths %> - your score was <%= @enrollment.percentage_correct %>% correct. At this time, your InfoArmy account will remain suspended. However, you will have a final chance to take the test in one month. If you would like to re-take the test, please email us at that time.</p>
+<p>You will not be allowed to create another account in the meantime - we carefully monitor all new researchers and will notice if you do so and take appropriate action.</p>
+<p>Your reports will be returned to the queue to ensure that they are completed on time. We hope you understand why we are taking these steps. We are not trying to single you out or punish you, but low data quality in reports hurts the whole Army.</p>
+<p>For the next month, please study the Help files to prepare. Feel free to email support@infoarmy.com with any questions.</p>
 <% end %>
 <p>Sincerely,</p>
 <p>-The <%= @current_company.name %> Team</p>
