--- a/app/views/paths/_dashboard_users.html.haml
+++ b/app/views/paths/_dashboard_users.html.haml
@@ -10,12 +10,11 @@
     - if @responses.empty?
       %p{ style: "margin-top: 30px;" } There are no responses for this user yet.
     - else
-      %p #{@responses.size.to_s} questions answered, #{@percentage_correct.to_s}% correct
       - if @enrollment.is_complete
         - if @enrollment.is_passed
           %span.label.success Passed
         - else
-          %span.label Failed
+          %span.label.important Failed
       - else
         = form_tag(grade_enrollment_path(@enrollment), method: "put") do
           %div.row{ style: "margin-left: 0px;" }
@@ -25,16 +24,18 @@
           %div.row{ style: "margin-left: 0px;" }
             = submit_tag("Pass", class: "btn primary")
             = submit_tag("Fail", class: "btn")
+      %p{ style: "margin-top:10px;" } #{@responses.size.to_s} questions answered, #{@percentage_correct.to_s}% correct
       %ol
         - @responses.each do |r|
           %li{ style:"padding:15px; color:#404040;" }
             %p{ style: "font-size: 16px; font-weight:bold; margin-bottom: 20px;" }= r.task.question
             - if r.task.answer_type == 2
-              %p= Answer.find(r.answer_id).content
+              %p
+                %blockquote= Answer.find(r.answer_id).content
               - if r.points_awarded > 0
-                %p{ style: "font-style: italic; font-size: 13px;"} Correct
+                %span.label.success Correct
               - else
-                %p{ style: "font-style: italic; font-size: 13px;"} Wrong
+                %span.label.important Wrong
             - else
               - if r.task.answer_sub_type == 100
                 %blockquote
