--- a/app/views/paths/_path_header.html.erb
+++ b/app/views/paths/_path_header.html.erb
@@ -11,33 +11,40 @@
         <h1 style="font-size: 28px; line-height:28px; margin:0px 0 4px 3px;" title="<%= @path.name %>"><%= truncate(@path.name, :length => 55) %></h1>
       </div>
       <div class="" style="margin:5px 0px 5px 5px; padding:0px; float:right; background-color: white; text-align:right;">
-        <div style="font-size: 18px; padding:0;">
-          <%= current_user.name %> <%= image_tag current_user.profile_pic, :size => "15x15" %>
-        </div>
-        <% if @completed %>
-        <p style="margin-bottom:0px;">You're ranked <strong><%= @user_rank %></strong> with <strong><%= pluralize(@total_points_earned.to_i, "point") %></strong>
-        </p>
-        <p style="margin-bottom:0px;">You reached a skill ranking of <strong><%= @skill_ranking.to_s %></strong>!</p>
-        <% else %>
-        <p style="margin:3px;">Complete <%= name_for_paths %> to see Ranking</p>
+        <% if @enable_leaderboard && @completed %>
+          <div style="font-size: 18px; padding:0;">
+            <%= current_user.name %> <%= image_tag current_user.profile_pic, :size => "15x15" %>
+          </div>
+          <% if @completed %>
+          <p style="margin-bottom:0px;">You're ranked <strong><%= @user_rank %></strong> with <strong><%= pluralize(@total_points_earned.to_i, "point") %></strong></p>
+          <p style="margin-bottom:0px;">You reached a skill ranking of <strong><%= @skill_ranking.to_s %></strong>!</p>
+          <% else %>
+          <p style="margin:3px;">Complete <%= name_for_paths %> to see Ranking</p>
+          <% end %>
         <% end %>
       </div>
     </div>
     <div class="row hoverscroll">
+    <% if @activity_stream.size > 3 %>
       <h6 style="margin-left:11px;padding:0;line-height:15px;color:#404040;text-transform:none;">Recent Activity</h6>
       <div class="hoverscroll_left"></div>
       <div class="hoverscroll_container" style="height: 160px; margin-left: -5px; margin-right:-10px;">
+      
         <div class="hoverscroll_content">
-        <% if @activity_stream.empty? %>
-          <p style="margin:15px;">No one has taken this <%= name_for_paths %> yet. Be the first by clicking <strong>Start Challenge</strong> below!</p>
-        <% else %>
-          <% @activity_stream.each do |item| %>
-            <%= render "activity_stream_item", :item => item %>
+          <% if @activity_stream.empty? %>
+            <p style="margin:15px;">No one has taken this <%= name_for_paths %> yet. Be the first by clicking <strong>Start Challenge</strong> below!</p>
+          <% else %>
+            <% @activity_stream.each do |item| %>
+              <%= render "activity_stream_item", :item => item %>
+            <% end %>
           <% end %>
-        <% end %>
         </div>
       </div>
       <div class="hoverscroll_right"></div>
+    <% else %>
+      <h6 style="margin-left:11px;padding:0;line-height:15px;color:#404040;text-transform:none;">Description</h6>
+      <p style="font-size:15px; margin:15px;"><%= @path.description %></p>
+    <% end %>
     </div>
   </div>
 </div>
