Fixes to base genesis file, css cleanup in challenge, path from signup to challenge now direct - now longer goes through the challenge page.

--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -5,6 +5,7 @@
       $(this).addClass("active");
       $(".exploretiledetailsarea").replaceWith(data);
     });
+    $(".persona_select:first").addClass("active");
   });
   
 %div.explorenewusercontent
