--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -1,3 +1,7 @@
+:css
+  .container.body { background-color: transparent; border: 0px; box-shadow: none;}
+  #content { padding-top: 0px; }
+
 = form_for(@task, url: took_section_path(@section, task_id: @task.id)) do |f|
   :javascript
     $(function(){
