--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -67,7 +67,7 @@
               %input#answer_input{ type: "text", name: "answer", style: "width: 250px;", placeholder: "Copy & paste link to youtube video here...", autofocus: "autofocus" }
               %a#answer_preview_button.btn.secondary{ style: "margin-left: 10px;" } Preview
               %p{ style: "font-style:italic;" } *Points awarded by votes
-              %div#answer_preview_container{ style: "padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
+              %div#answer_preview_container{ style: "text-align: center;padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
                 %div#answer_preview
                   = image_tag "/images/youtube_thumb.jpg", :size => "380x200", :id => "youtube_placeholder"
       %div.CRbuttonspace
