--- a/app/views/paths/community.html.haml
+++ b/app/views/paths/community.html.haml
@@ -37,4 +37,4 @@
               %span.level lvl. #{entry.user.level(@path)}
               %span.points= entry.score
     %div.span11
-      = render "shared/newsfeed", { newsfeed_items: @responses }
+      = render "newsfeed", { newsfeed_items: @responses }
