--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -234,3 +234,31 @@
 .exploretextdetails h2        { font-size:23px; font-weight:bold; font-style:italic;}
 
 .modal_close { float:right; margin: 5px 10px 0 0; background-color: transparent; font-size: 17px; }
+
+.counter {display:block;float:left;font-size:2em;line-height:1.2em; -webkit-box-reflect: below -15px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(60%, transparent), to(rgba(255,255,255,0.3)));}
+.counter span.digit {background:#161616;background: #3F3F3F; /* Old browsers */background: linear-gradient(bottom, #0A0A0A 0%, #2B2B2B 50%, #3F3F3F 100%);background: -o-linear-gradient(bottom, #0A0A0A 0%, #2B2B2B 50%, #3F3F3F 100%);background: -moz-linear-gradient(bottom, #0A0A0A 0%, #2B2B2B 50%, #3F3F3F 100%);background: -webkit-linear-gradient(bottom, #0A0A0A 0%, #2B2B2B 50%, #3F3F3F 100%);background: -ms-linear-gradient(bottom, #0A0A0A 0%, #2B2B2B 50%, #3F3F3F 100%); background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #0A0A0A), color-stop(0.5, #2B2B2B), color-stop(1, #3F3F3F)); filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FF0A0A0A', endColorstr='#FF3F3F3F'); /* IE6 & IE7 */-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FF0A0A0A', endColorstr='#FF3F3F3F')"; /* IE8 */zoom:1; background-clip:border; color:#FFF;display:block;float:left; height:44px;overflow:hidden; padding:0; position:relative;text-align:center;width:30px;}
+.counter span.digit span {line-height:44px;position:relative;top:0;}
+.counter span.digit hr {border-color: transparent;-webkit-box-shadow: inset 0 2px 1px  rgba(0,0,0,0.5);-moz-box-shadow: inset 0 2px 1px  rgba(0,0,0,0.5);box-shadow: inset 0 2px 1px   rgba(0,0,0,0.5);  height: 3px; margin: -2px 0 0 0;  position: absolute;top: 50%; width: 100%;z-index: 1;}
+.counter span.separator {display:block;float:left; font-family:Georgia, serif; font-size:0.5em;position:relative; top:0.5em;}
+.counter span.separator hr {display:none;}
+
+body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easterislandsketch70pct.jpg');background-repeat:no-repeat;background-attachment:fixed;background-size:100% 100%;font-family: 'Muli', sans-serif;}
+.quizcontainer{overflow:hidden; width:768px;margin-left:auto;margin-right:auto;margin-top:100px; border-radius:6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, .8); }
+.quizspace{background-color:white; margin:12px; border-radius:10px;border:1px solid rgba(0, 0, 0, .1);overflow:hidden; padding:12px;}
+.quizheader{margin-bottom:12px;}
+.quizheader img{width:78px; display:inline-block; margin-right:4px;}
+.quizheader span{ font:normal 29px'Muli', sans-serif; position:relative; left:5px;}
+#progressbar{width:632px; height: 40px; margin: 0 auto;}
+.completionmessagespace{display:inline-block; width:396px;overflow: hidden; border-right:1px solid rgba(0, 0, 0, .1);}
+.completionheader{ margin-left: 12px; }
+.completionheader span{font:normal 29px 'Muli', sans-serif;}
+.completionsubheader{margin-left:12px; font-size:16px}
+.completionstats{margin:12px 12px 0 12px; font-size:13px; font-style: italic; border: 1px solid rgba(0, 0, 0, .1); padding: 6px 9px 9px 9px; border-radius: 6px; background-color: #F9F9F9;}
+.completionstats img{display:inline-block; width:40px; margin-left:6px; vertical-align: top; }
+.completionnextsteps{margin:0 0 10px 8px; height:177px; word-wrap:normal; width:289px; font-size:14px; border: 1px solid rgba(0, 0, 0, .1); padding: 0 9px; border-radius: 6px; background-color: #E5F5EA;}
+.completionnextsteps ul{}
+.completionnextsteps p{text-indent:15px;}
+.completionnextsteps a{font-style: italic; }
+.socialicon{height:14px; margin:0 2px; }
+.socialiconholder{position:relative; margin-left:300px; bottom:6px;}
+.quizspace button{float:right;}
