--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -63,7 +63,7 @@
     margin-bottom:10px;
     
 }
-#updatespace{ background-color: white; border-radius:6px; padding: 12px 0 9px 13px; overflow: hidden; }
+#updatespace{ background-color: white; border-radius: 6px; padding: 12px 0 9px 13px; overflow: hidden;}
 .bigheaderimage{ height:160px; width:160px; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px; margin-right: 12px; border-radius:4px;}
 .rightofbigheaderimage{ display:inline-block; }
 
@@ -142,13 +142,11 @@
 .span11{ display: inline-block; vertical-align: top;} 
 .row .span5{margin-left:20px;}
 .row .span11{margin-left:12px;}
-.container.body { width: 940px; padding: 15px; }
+.container.body { width: 940px; padding: 15px; background-color: rgba(255, 255, 255, .3); border:none; box-shadow:none; }
 #content { padding-top: 42px; min-height: 450px;}
 
 /* From profile */
 #homepage{
-  background-color: white;
-  background: url('https://twimg0-a.akamaihd.net/a/1343405872/t1/img/wash-white-30.png');
   font-family: muli,sans-serif;
   color:#333;     
 }
@@ -160,15 +158,7 @@
 .leftrailcontent{ list-style-type: none; display:list-item; margin-top:3px; }
 .leftrailicon{ height:46px; width:46px; border-radius:3px; margin-right:3px; }
 .leftbox{text-shadow: 0 1px 0 white; border: 1px solid rgba(0, 0, 0, .1);font-size:12px; position: relative; margin-bottom: 12px;line-height: 16px;border-radius: 6px; display:block;}
-.leftboxheader{
-  background-color: #F9F9F9;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-  padding:10px 12px;
-  border-bottom: 1px solid #DDD;
-  font-weight: bold;
-  letter-spacing: .14em;
-}
+.leftboxheader{background-color: #F9F9F9;border-top-right-radius: 5px; border-top-left-radius: 5px; padding:10px 12px;border-bottom: 1px solid #DDD; font-weight: bold; letter-spacing: .14em;}
 .leftboxfooter ul{ list-style-type:none; margin:0; }
 .leftboxfooter span{ font-size:11px; color:gray; }
 
@@ -212,8 +202,7 @@
 .CRbuttonspace {margin-top:12px; }
 
 #topsection { border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; position:relative; background-clip: padding-box; color:#333; background-color:white; margin-bottom:12px; }
-.headerspace { padding: 12px 0 12px 12px; font:bold 11px arial, sans-serif; text-transform: uppercase; border-bottom: 1px solid #DDD; border-top-left-radius: 6px; border-top-right-radius: 6px; }
-#updatespace { background-color: #F9F9F9; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; padding: 12px 0 12px 12px; }
+.headerspace { padding: 12px 0 12px 12px; font:bold 11px arial, sans-serif; text-transform: uppercase; border-bottom: 1px solid #DDD; border-top-left-radius: 6px; border-top-right-radius: 6px; }updatespace { background-color: #F9F9F9; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; padding: 12px 0 12px 12px; }
 .inlinedisplay { list-style-type: none; position:relative; margin: 0; }
 .inlinedisplay li{ display:inline; }
 
