--- a/app/views/paths/community.html.haml
+++ b/app/views/paths/community.html.haml
@@ -27,7 +27,7 @@
   %div.row
     %div.span5
       %div.leftbox
-        %div.headerspace Leaderboard
+        %div.leftboxheader Leaderboard
         %ul#ranks
           - @leaderboards.each_with_index do |entry, i|
             %li
