more style changes and style cleanup

--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -2,7 +2,7 @@
   %div#topsection
     %div.headerspace
       %div#leftheaderspace Enrolled Challenges
-    %div#updatespace
+    %div#carouselupdatespace
       %ul.inlinedisplay
         - @enrolled_paths.each do |p|
           %li
