--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -15,18 +15,7 @@
 .btn div { margin: 0 1px 0 8px; position:relative; bottom:3px; }
 .points { font-style:italic; font-weight:bold; font-size:15px; position:relative; bottom:3px; margin-left:4px; }
 .postphotospace { display:inline-block; vertical-align: top; margin-right:12px; }
-.postspace{
-  display: inline-block;
-  border-radius: 3px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, .05);
-  background-color:white;
-  border: 1px solid #ccc;
-  margin:0 auto 0 auto;
-  position:relative;
-  font:normal 13px arial, sans-serif;
-  padding: 0 12px;
-  width: 520px;
-}
+.postspace{display: inline-block;  border-radius: 3px;  box-shadow: 0 2px 4px rgba(0, 0, 0, .05);  background-color:white;  border: 1px solid #ccc;  margin:0 auto 0 auto;  position:relative;font:normal 13px arial, sans-serif;padding: 0 12px;width: 520px;}
 .photo{ border-radius:4px; width: 50px; height: 50px; }
 .username{ text-decoration: none; color:#005C1F; font-size:17px; }
 .posttext { margin: -2px -12px 0 -12px; padding: 3px 12px; background-color:#E5F5EA; }
@@ -52,17 +41,7 @@
 .newsfeed>.leftboxheader{padding:6px 12px;}
 
 /* Other stuff - organize by feature */
-#topsection{
-    margin: 0;
-    border: 1px solid rgba(0, 0, 0, .1);
-    border-radius: 6px;
-    position:relative;
-    background-clip: padding-box;
-    color:#333;
-    background-color:white;
-    margin-bottom:10px;
-    
-}
+#topsection{margin: 0; border: 1px solid rgba(0, 0, 0, .1);border-radius: 6px;position:relative;background-clip: padding-box; color:#333; background-color:white; margin-bottom:10px;}
 #updatespace{ background-color: white; border-radius: 6px; padding: 12px 0 9px 13px; overflow: hidden;}
 .bigheaderimage{ height:160px; width:160px; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px; margin-right: 12px; border-radius:4px;}
 .rightofbigheaderimage{ display:inline-block; }
@@ -76,59 +55,15 @@
 .challengecarousel{ display:inline-block; height: 78px; overflow: hidden; }
 .inlinedisplay { list-style-type: none; position:relative; margin: 0; bottom:6px;}
 .inlinedisplay li { display:inline; }
-.bar2 .mosaic-overlay { bottom:-20px; height:40px; opacity:0.8; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; filter:alpha(opacity=80); }
-.bar2 .mosaic-overlay:hover { opacity:1; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter:alpha(opacity=100); text-decoration: none; }
-.mosaic-block {
-  display:inline-block;
-  position:relative;
-  overflow:hidden;
-  width:200px;
-  height:80px;
-  margin-right:10px;
-  background:#111 url(../img/progress.gif) no-repeat center center;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;
-}
-.mosaic-backdrop {
-  display:none;
-  position:absolute;
-  top:0;
-  height:100%;
-  width:100%;
-  background:#111;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;
-}
-.mosaic-overlay {
-  display:none;
-  z-index:5;
-  position:absolute;
-  width:100%;
-  height:100%;
-  background:#111;
-}
-.leftbox{
-  text-shadow: 0 1px 0 white;
-  border: 1px solid rgba(0, 0, 0, .1);
-  font-size:12px;
-  position: relative;
-  margin-bottom: 10px;
-  line-height: 16px;
-  border-radius: 6px; 
-  display:block;
-}
-.leftboxheader{
-  background-color: #F9F9F9;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-  padding:10px 12px;
-  border-bottom: 1px solid #DDD;
-  font-weight: bold;
-}
-.leftboxfooter{
-  background-color:whitesmoke;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  padding: 10px 12px;
-}
+.bar2 .mosaic-overlay { bottom:-20px; height:40px; background-color: rgba(0, 0, 0, .8); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; filter:alpha(opacity=80); }
+.bar2 .mosaic-overlay:hover { background-color: rgba(0,0,0,1); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter:alpha(opacity=100); text-decoration: none; }
+.mosaic-block {display:inline-block;  position:relative;overflow:hidden;width:200px;height:80px;margin-right:10px; background:#111 url(../img/progress.gif) no-repeat center center; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;}
+.mosaic-backdrop {display:none;position:absolute;top:0;height:100%;width:100%;background:#111; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;}
+.mosaic-overlay {display:none;z-index:5;position:absolute;width:100%; height:100%; background:#111;}
+.details h4{margin: 9px 10px 10px 10px;font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif;line-height: 10%;letter-spacing: 0.15em; color: rgba(255, 255, 255, .9);text-shadow: 1px 1px 0 black;}
+.mosaic-overlay:hover .details>h4{color:white;}
+.leftbox{text-shadow: 0 1px 0 white;border: 1px solid rgba(0, 0, 0, .1); font-size:12px;position: relative; margin-bottom: 10px;line-height: 16px; border-radius: 6px; display:block;}
+.leftboxfooter{  background-color:whitesmoke; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 10px 12px;}
 #ranks { list-style: none; margin:0px; padding: 10px 0; }
 #ranks li { padding: 2px 0 7px 12px; font:normal 15px arial, sans-serif; }
 #ranks li:last-child { border-bottom-left-radius: 6px; border-bottom-right-radius:6px; }
@@ -158,7 +93,6 @@
 .leftrailcontent{ list-style-type: none; display:list-item; margin-top:3px; }
 .leftrailicon{ height:46px; width:46px; border-radius:3px; margin-right:3px; }
 .leftbox{text-shadow: 0 1px 0 white; border: 1px solid rgba(0, 0, 0, .1);font-size:12px; position: relative; margin-bottom: 12px;line-height: 16px;border-radius: 6px; display:block;}
-.leftboxheader{background-color: #F9F9F9;border-top-right-radius: 5px; border-top-left-radius: 5px; padding:10px 12px;border-bottom: 1px solid #DDD; font-weight: bold; letter-spacing: .14em;}
 .leftboxfooter ul{ list-style-type:none; margin:0; }
 .leftboxfooter span{ font-size:11px; color:gray; }
 
@@ -202,7 +136,8 @@
 .CRbuttonspace {margin-top:12px; }
 
 #topsection { border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; position:relative; background-clip: padding-box; color:#333; background-color:white; margin-bottom:12px; }
-.headerspace { padding: 12px 0 12px 12px; font:bold 11px arial, sans-serif; text-transform: uppercase; border-bottom: 1px solid #DDD; border-top-left-radius: 6px; border-top-right-radius: 6px; }updatespace { background-color: #F9F9F9; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; padding: 12px 0 12px 12px; }
+.headerspace { padding: 12px 0 12px 12px; font:bold 11px arial, sans-serif; text-transform: uppercase; border-bottom: 1px solid #DDD; border-top-left-radius: 6px; border-top-right-radius: 6px; }
+#carouselupdatespace {background-color: #F9F9F9;border-bottom-left-radius: 6px;border-bottom-right-radius: 6px;padding: 16px 0 3px 12px; }
 .inlinedisplay { list-style-type: none; position:relative; margin: 0; }
 .inlinedisplay li{ display:inline; }
 
