--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,13 +1,3 @@
-:css
-  .fill{height:40px;}
-  .topbar-inner, .topbar .fill{background-image: -webkit-linear-gradient(top, #334C80, #1F2E4C)}
-  .topbar {height: 40px;position: fixed;top: 0;left: 0;right: 0; z-index: 10000;overflow: visible;}
-  .chunk.cloudy{display:inline-block; width:30px; height:40px; background-color:white;opacity:.15; margin-right:28px;z-index: 1;}
-  .container {width: 940px;margin-left: auto;margin-right: auto; zoom: 1;display:inline-block;padding:3px 0 0 142px;}
-  .topbar h3 a, .topbar .brand {float: left;display: block; padding: 0px 20px 12px; margin-left: -20px;line-height: 1; text-decoration: none;font: normal 18px arial, sans-serif;}
-  .container h3{left:68px;}
-  .container img{width:150px}
-      
 %nav.topbar{ "data-scollspy" => "scrollspy", "data-dropdown" => "dropdown" }
   %div.fill
     %div{ style: "position:absolute;" }
@@ -17,3 +7,13 @@
       %h3
         = link_to root_url, style: "font-size: 26px;" do
           = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", style: "position:absolute; left:-23px;")
+      %ul.navicons{ style: "margin-left:177px; bottom:7px; border-right:1px solid #56698B;" }
+        %li.navitem
+          = link_to root_url do
+            = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/60-signpost%402x+lightest.png", style: "width:22px;"
+        %li.navitem
+          = link_to root_url do
+            = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/145-persondot%402x+lightest.png", style: "width:22px;"
+        %li.navitem
+          = link_to root_url do
+            = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/91-beaker-2%402x+lightest.png", style: "width:22px;"
