--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -3,7 +3,7 @@
     %div{ style: "position:absolute;" }
       - 6.times do
         %div.chunk.cloudy
-    %div
+    %div{ style: "margin-left: 143px;" }
       %h3
         = link_to root_url, style: "font-size: 26px;" do
           = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", style: "position:absolute; left:-23px;")
@@ -11,10 +11,14 @@
         %ul.navicons{ style: "margin-left:177px; bottom:7px; border-right:1px solid #56698B;" }
           %li.navitem
             = link_to root_url do
-              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/60-signpost%402x+lightest.png", style: "width:22px;"
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/home.png", style: "width:22px;"
           %li.navitem
-            = link_to root_url do
-              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/145-persondot%402x+lightest.png", style: "width:22px;"
+            = link_to "#", class: "explore_link" do
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/explore+signpost.png", style: "width:22px;"
           %li.navitem
-            = link_to root_url do
-              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/91-beaker-2%402x+lightest.png", style: "width:22px;"
+            = link_to current_user do
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/profile.png", style: "width:22px;"
+          - if @enable_user_creation
+            %li.navitem
+              = link_to create_path do
+                = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/create.png", style: "width:22px;"
