--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,7 +9,7 @@
           = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", style: "position:absolute; left:-23px;")
       - if current_user
         %ul.navicons{ style: "margin-left:177px; bottom:7px; border-right:1px solid #56698B;" }
-          %li.navitem
+          %li.navitem{ style: "border-left: 0px;" }
             = link_to root_url do
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/home.png", style: "width:22px;"
           %li.navitem
