--- a/app/views/paths/_newsfeed.html.haml
+++ b/app/views/paths/_newsfeed.html.haml
@@ -13,6 +13,9 @@
           - @path.sections.each do |s|
             - s.creative_tasks.each do |task|
               %li{ style: "padding: 5px;" }= link_to truncate(task.question, length: 80), community_path_path(@path, task: task.id), style: "font-size: 14px; text-decoration: none; color: #0064CD"
+  - if newsfeed_items.empty?
+    %div.post{ style: "height: 300px;"}
+      %p There are no responses to this question yet.
   - newsfeed_items.each do |r|
     %div.post
       %div.postphotospace
