--- a/app/views/paths/community.html.haml
+++ b/app/views/paths/community.html.haml
@@ -26,7 +26,7 @@
                     %img.mosaic-backdrop{ src: u.profile_pic }
   %div.row
     %div.span5
-      %div.leftbox.newsfeed
+      %div.leftbox.newsfeed{ style: "min-height: 361px;" }
         %div.leftboxheader Leaderboard
         %ul#ranks
           - @leaderboards.each_with_index do |entry, i|
