--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -15,14 +15,14 @@
   %div.row
     %div.span5
       %div.leftbox
-        %div.leftboxheader Suggested Challenges
+        %div.headerspace Suggested Challenges
         %div.leftboxfooter
           %li.leftrailcontent
           - @suggested_paths.each do |p|
             = link_to p do
               = image_tag p.path_pic, class: "leftrailicon"
       %div.leftbox
-        %div.leftboxheader Enrolled Personas
+        %div.headerspace Enrolled Personas
         %div.leftboxfooter
           %li.leftrailcontent
           - @enrolled_personas.each do |p|
@@ -30,9 +30,8 @@
               = image_tag p.picture, class: "leftrailicon"
     %div.span11
       %div.newsfeed
-        %div.leftboxheader
-          %div
-            %span Stream
+        %div
+          %div.headerspace Stream
         - @newsfeed_items.each do |r|
           %div.post
             %div.postphotospace
