--- a/app/views/paths/community.html.haml
+++ b/app/views/paths/community.html.haml
@@ -37,4 +37,19 @@
               %span.level lvl. #{entry.user.level(@path)}
               %span.points= entry.score
     %div.span11
-      = render "newsfeed", { newsfeed_items: @responses }
+      %div.newsfeed
+        %div.leftboxheader
+          %div
+            %span.headerspace{ style: "border-bottom: 0px; padding-top:1px;" } Stream
+            = link_to "Date", community_path_path(@path, order: "date"), class: "btn leftbtn"
+            = link_to "Votes", community_path_path(@path, order: "votes"), class: "btn midbtn"
+            - if @path
+              %a.btn.rightbtn{ onclick: "$(this).parents('.leftboxheader').find('.questions_filter').slideDown();" } Question
+          -if @path
+            %div.questions_filter{ style: "display:none;" }
+              %p{ style: "font-size: 13px; margin: 10px 5px; color: black;" } Click on one of the questions below to see responses only for that question.
+              %ol
+                - @path.sections.each do |s|
+                  - s.creative_tasks.each do |task|
+                    %li{ style: "padding: 5px;" }= link_to truncate(task.question, length: 80), community_path_path(@path, task: task.id), style: "font-size: 14px; text-decoration: none; color: #0064CD"
+        = render "shared/newsfeed", { newsfeed_items: @responses }
