--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -41,22 +41,4 @@
       %div.newsfeed
         %div
           %div.headerspace Stream
-        - @newsfeed_items.each do |r|
-          %div.post
-            %div.postphotospace
-              = image_tag r.user.profile_pic, class: "photo"  
-            %div.postspace
-              %div.postheader
-                %h3
-                  %a.username= r.user.to_s
-                %div.votingandpointsarea
-                  = link_to vote_task_path(r.task.id, sa_id: r.submitted_answer.id), remote: true, class: ("btn vote_button " + (@votes.include?(r.submitted_answer.id) ? "primary" : "")) do
-                    %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/purple+upvote+arrow.png" }
-                    %div.vote_count= r.submitted_answer.total_votes.to_i
-              %div.posttext.leveltext= r.task.question
-              %div.CRarea
-              - if r.task.answer_sub_type == 100
-                %blockquote{ style: "margin:20px;" }= r.submitted_answer.content
-              - elsif r.task.answer_sub_type == 101
-                = link_to image_tag(sanitize(r.submitted_answer.content), class: "CRimage"), sanitize(r.submitted_answer.content), :target => "_blank"
-              = render "comments/comments", { owner: r.submitted_answer, owner_type: "SubmittedAnswer", owner_id: r.submitted_answer_id, comment_count: r.submitted_answer.comments.size, created_at: r.created_at}
+        = render "shared/newsfeed", { newsfeed_items: @newsfeed_items }
