--- a/app/views/paths/community.html.haml
+++ b/app/views/paths/community.html.haml
@@ -1,4 +1,3 @@
-= render "paths/popups/launchpad", { display: @display_dashboard }
 %section
   %div#topsection
     %div#updatespace
@@ -53,3 +52,38 @@
                   - s.creative_tasks.each do |task|
                     %li{ style: "padding: 5px;" }= link_to truncate(task.question, length: 80), community_path_path(@path, task: task.id), style: "font-size: 14px; text-decoration: none; color: #0064CD"
         = render "shared/newsfeed", { newsfeed_items: @responses }
+
+%div#launchpad.modal.hide.fade{ style: "left: 38%; top: 30%;"}
+  %div.overlay
+    %div.launchpad
+      %button.modal_close &times;
+      %h1
+        = image_tag(@path.path_pic)
+        %span #{@path.name} - #{@total_points_earned} pts, Level #{current_user.level(@path)}
+      %div.launchpadcontent
+        %div.launchpadsectioncolumn
+          %div.launchpadcolumnheader
+            Sections
+          %ul.sectionlist
+            - @path.sections.each do |s|
+              %li.launchpad_link
+                = link_to s.name, launchpad_section_path(s), remote: true, style: "text-decoration: none;"+(s.unlocked?(current_user) ? "font-weight: bold" : "") 
+                %div.pointsandprogress
+                  %div #{s.points_earned(current_user)} points
+                  %div #{s.percentage_complete(current_user)}%
+        = render "sections/launchpad"
+
+:javascript
+  $(function(){
+    $(".userctrlpanel").click(function(){
+      $('#launchpad').modal({ keyboard: true, backdrop: 'static', show: true });
+    });
+     
+    $(".launchpad_link").on("ajax:success", function(xhr, data, etc){
+      $(".sectioninfocontainer").replaceWith(data);
+    });
+  });
+
+- if @display_launchpad
+  :javascript
+    $(function(){ $('#launchpad').modal({ keyboard: true, backdrop: 'static', show: true }); });
