explore challenge title bug fix

--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -37,7 +37,7 @@
       %div.mosaic-block.bar2
         = link_to (current_user.enrolled?(path) ? path_url(path) : continue_path_url(path)), class: "mosaic-overlay" do
           %div.details
-            %h4 Challenge Title
+            %h4 #{path.name}
             - if current_user.enrolled?(path)
               %button.btn.success Enrolled
             - else
