--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -24,14 +24,14 @@
   %div.row
     %div.span5
       %div.leftbox
-        %div.headerspace Suggested Challenges
+        %div.leftboxheader Suggested Challenges
         %div.leftboxfooter
           %li.leftrailcontent
           - @suggested_paths.each do |p|
             = link_to p do
               = image_tag p.path_pic, class: "leftrailicon"
       %div.leftbox
-        %div.headerspace Enrolled Personas
+        %div.leftboxheader Enrolled Personas
         %div.leftboxfooter
           %li.leftrailcontent
           - @enrolled_personas.each do |p|
@@ -40,5 +40,5 @@
     %div.span11
       %div.newsfeed
         %div
-          %div.headerspace Stream
+          %div.leftboxheader Stream
         = render "shared/newsfeed", { newsfeed_items: @newsfeed_items }
