Removing dead files, fixed explore modal.

--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -12,10 +12,10 @@
   %div.exploreheader
     %button.modal_close{ style: "margin: 5px 20px 0 0;" } &times;
     %h1{ style: "font-size: 23px; margin-bottom: 8px;" }
-      %strong Explore: Pick a path...
+      %strong Explore: Pick a challenge...
     %div
       %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px" }
-      %p{ style: "font-size: 15px; line-height: 28px; display:inline; "} Paths organize all the MetaBright Challenges. You can always enroll in multiple paths. 
+      %p{ style: "font-size: 15px; line-height: 28px; display:inline; "} Personas organize all the MetaBright Challenges. You can always enroll in multiple paths. 
   %hr{ style: "margin:0px;" }
   %div.exploretiles
     - @personas.each do |persona|
